🐛 Fix noscript for avatar randomiser

--- a/content/index.njk
+++ b/content/index.njk
@@ -84,12 +84,13 @@ scripts: '
 <div class="bio">
 	<h2 class="visually-hidden">Bio</h2>
 	<div class="avatar">
-		<div class="avatar__script swapAvatar" width="200" height="200"></div>
-		<noscript>
-			<img class="avatar__noscript" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her" width="200" height="200">
-		</noscript>
+		<div class="avatar__script swapAvatar" width="200" height="200">
+			<noscript>
+				<img class="avatar__noscript" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her" width="200" height="200">
+			</noscript>
+		</div>
 		<div class="avatar__extra">
-			<button id="refreshAvatar" class="button hidden">
+			<button id="refreshAvatar" class="button hidden noscriptHide">
 				🔃 Refresh avatar
 			</button>
 			<span>🖼️ <a href="/collections/avatars" class="hidden">More avatars</a></span>
