❄️ Add Snow and Christmas theme groundwork

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,6 @@
 
 @import url('./pages/_homepage.css');
 @import url('./pages/_bloglist.css');
+
+@import url('./themes/_snow.css');
+@import url('./themes/_christmas.css');
