--- a/content/links.njk
+++ b/content/links.njk
@@ -158,6 +158,12 @@ scripts: '<script>
       </a>
     </li>
     <li class="buttonwall__image">
+      <a href="https://sentimentalfuturist.net/">
+        <img src="/images/buttons/sentimental_futurist.png" alt="Sentimental Futurist" alt="Sanguine Royal">
+      </a>">
+      </a>
+    </li>
+    <li class="buttonwall__image">
       <a href="https://sneekrealm.neocities.org/">
         <img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
       </a>
