--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,5 +1,7 @@
 <script src="/js/sparkles.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/themes/snow.js"></script>
+<script src="/js/themes/christmas.js"></script>
 <script data-goatcounter="https://frills.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 {% if scripts -%}
 {{scripts|safe}}
