🧩 Update collection covers to be square

--- a/content/collections.njk
+++ b/content/collections.njk
@@ -35,7 +35,7 @@ style: '
 {% block main %}
 <section class="dashboard">
   <article class="dashboard__item --box"">
-    <figure class="dashboard__item-image">
+    <figure class="dashboard__item-image --square">
       <img src="/images/collections/stickers/cover.png" alt="Great alt text" loading="lazy" role="presentation">
     </figure>
     <header>
@@ -45,7 +45,7 @@ style: '
       </header>
   </article>
   <article class="dashboard__item --box"">
-    <figure class="dashboard__item-image">
+    <figure class="dashboard__item-image --square">
       <img src="/images/collections/avatars/cover.png" alt="Great alt text" loading="lazy" role="presentation">
     </figure>
     <header>
