--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -17,6 +17,13 @@
   break-inside: avoid;
 }
 
+.dashboard__item-image {}
+
+.dashboard__item-image.--square {
+  aspect-ratio: 1;
+  width: 100%;
+}
+
 .dashboard__item.--box {
   box-shadow: inset 0 0 0 4px var(--dashboard-bg), 4px 4px 0 0 var(--dashboard-outline);
   padding: 4px;
