🍱 Update dashboard image background

--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -17,11 +17,14 @@
   break-inside: avoid;
 }
 
-.dashboard__item-image {}
+.dashboard__item-image {
+  background-color: var(--dashboard-bg);
+}
 
 .dashboard__item-image.--square {
   aspect-ratio: 1;
   width: 100%;
+  object-fit: cover;
 }
 
 .dashboard__item.--box {
