🐛 Fix HTML validation

--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -165,7 +165,7 @@ style: '
             transform: rotate(-15deg);
         }
     }'
-scripts: '<script defer>sparkles(["👻"])</script>'
+scripts: '<script>sparkles(["👻"])</script>'
 ---
 
 {% block main %}
