--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -149,7 +149,7 @@ style: '
     font-weight: 400;
   }'
 scripts: '
-<script defer>
+<script>
   const colours = document.querySelectorAll(".namedcolours__item");
   document.getElementById("namedColourReset").addEventListener("click",function (e) {
     colours.forEach(function (colour) {colour.style.display = "block";})
