--- a/content/links.njk
+++ b/content/links.njk
@@ -20,254 +20,377 @@ scripts: '<script>
 
 {%- block main -%}
 <h1>{{title}}</h1>
+
+{% set links = [
+  {
+    "type": "button",
+    "href": "https://32bit.cafe",
+    "src": "32bitcafe.png",
+    "alt": "32bit cafe"
+  }, {
+    "type": "button",
+    "href": "https://pinkvampyr.leprd.space/accessiblenet/directory",
+    "src": "accessiblenet.png",
+    "alt": "Accessible Net"
+  }, {
+    "type": "button",
+    "href": "https://midifreak.online/",
+    "src": "coffeebug.png",
+    "alt": "Coffee Bug"
+  }, {
+    "type": "button",
+    "href": "https://debtdeath.neocities.org/",
+    "src": "debtdeath.png",
+    "alt": "debtdeath"
+  }, {
+    "type": "button",
+    "href": "https://divergentrays.com/",
+    "src": "divergentrays.png",
+    "alt": "Divergent Rays"
+  }, {
+    "type": "button",
+    "href": "https://doctordizzy.space/",
+    "src": "dizzy.png",
+    "alt": "Dizzy"
+  }, {
+    "type": "button",
+    "href": "https://doubleincision.com/",
+    "src": "doubleincision.png",
+    "alt": "Double Incision"
+  }, {
+    "type": "button",
+    "href": "https://fh102.neocities.org/",
+    "src": "fh102.png",
+    "alt": "fh 102"
+  }, {
+    "type": "button",
+    "href": "https://fizzsea.neocities.org/",
+    "src": "fizzsea.png",
+    "alt": "Fizzsea"
+  }, {
+    "type": "button",
+    "href": "https://grlrot.neocities.org/",
+    "src": "grlrot.png",
+    "alt": "grlrot"
+  }, {
+    "type": "button",
+    "href": "https://hillhouse.neocities.org/",
+    "src": "hillhouse.png",
+    "alt": "Hillhouse"
+  }, {
+    "type": "button",
+    "href": "https://inkcaps.neocities.org/",
+    "src": "inkcaps.png",
+    "alt": "Inkcaps"
+  }, {
+    "type": "button",
+    "href": "https://jasm1nii.xyz/",
+    "src": "jasmines_journal.png",
+    "alt": "Jasmine's Journal"
+  }, {
+    "type": "button",
+    "href": "https://justfluffingaround.neocities.org/",
+    "src": "justfluffingaround.png",
+    "alt": "Just Fluffing Around"
+  }, {
+    "type": "button",
+    "href": "https://lostletters.neocities.org/",
+    "src": "lostletters.png",
+    "alt": "Lost Letters"
+  }, {
+    "type": "button",
+    "href": "https://sunosin.neocities.org/",
+    "src": "lipu_pi_jan_sunosin.png",
+    "alt": "lipu pi jan sunosin"
+  }, {
+    "type": "button",
+    "href": "https://maria.town/",
+    "src": "marzka_cafe.png",
+    "alt": "Maria"
+  }, {
+    "type": "button",
+    "href": "https://maya.land/",
+    "src": "maya_land.png",
+    "alt": "Maya Land"
+  }, {
+    "type": "button",
+    "href": "https://melonking.net/",
+    "src": "melonking.png",
+    "alt": "Melon King"
+  }, {
+    "type": "button",
+    "href": "https://moonpr1sm.neocities.org",
+    "src": "moonpr1sm.png",
+    "alt": "Moon Prism"
+  }, {
+    "type": "button",
+    "href": "https://owlsroost.xyz/",
+    "src": "owlsroost.png",
+    "alt": "Owl's Roost"
+  }, {
+    "type": "button",
+    "href": "https://neonaut.neocities.org/",
+    "src": "neonaut.png",
+    "alt": "Neonaut"
+  }, {
+    "type": "button",
+    "href": "https://nonkiru.art",
+    "src": "nonkiru.png",
+    "alt": "Nonkiru"
+  }, {
+    "type": "button",
+    "href": "https://notprincehamlet.neocities.org/",
+    "src": "notprincehamlet.png",
+    "alt": "Not Prince Hamlet"
+  }, {
+    "type": "button",
+    "href": "https://pinkvampyr.neocities.org/",
+    "src": "pinkvampyr.png",
+    "alt": "PinkVampyr"
+  }, {
+    "type": "button",
+    "href": "https://pixelmoondust.neocities.org/",
+    "src": "pixelmoondust.png",
+    "alt": "Pixel Moondust"
+  }, {
+    "type": "button",
+    "href": "https://punkwasp.leprd.space/",
+    "src": "punkwasp.png",
+    "alt": "PunkWasp"
+  }, {
+    "type": "button",
+    "href": "https://salixx.neocities.org/",
+    "src": "salixx.png",
+    "alt": "Salixx"
+  }, {
+    "type": "button",
+    "href": "https://sanguineroyal.com/",
+    "src": "sanguineroyal.png",
+    "alt": "Sanguine Royal"
+  }, {
+    "type": "button",
+    "href": "https://sentimentalfuturist.net/",
+    "src": "sentimental_futurist.png",
+    "alt": "Sentimental Futurist"
+  }, {
+    "type": "button",
+    "href": "https://sneekrealm.neocities.org/",
+    "src": "sneekrealm.png",
+    "alt": "Sneek Realm"
+  }, {
+    "type": "button",
+    "href": "https://solaria.neocities.org/",
+    "src": "solaria.png",
+    "alt": "Solaria"
+  }, {
+    "type": "button",
+    "href": "https://soyatoast.neocities.org/",
+    "src": "soyatoast.png",
+    "alt": "Soya Toast"
+  }, {
+    "type": "button",
+    "href": "https://starbreaker.org/",
+    "src": "starbreaker.png",
+    "alt": "Starbreaker"
+  }, {
+    "type": "button",
+    "href": "https://whiona.me/",
+    "src": "whiona.png",
+    "alt": "Whiona"
+  }, {
+    "type": "button",
+    "href": "https://xandra.cc/",
+    "src": "xandra.png",
+    "alt": "The Museum of Alexandra"
+  }, {
+    "type": "link",
+    "href": "https://amberwilson.co.uk/",
+    "size": "11px",
+    "bg": "#b6d0f1",
+    "color": "#4b0e90",
+    "name": "Amber Wilson"
+  }, {
+    "type": "link",
+    "href": "https://eevis.codes/",
+    "size": "11px",
+    "bg": "#e76f51",
+    "color": "#0d0221",
+    "name": "Eevis"
+  }, {
+    "type": "link",
+    "href": "https://jessicajournals.com",
+    "size": "11px",
+    "bg": "#1e1e2e",
+    "color": "#A5E3A1",
+    "name": "jessica journals"
+  }, {
+    "type": "link",
+    "href": "https://kittygiraudel.com/",
+    "size": "11px",
+    "bg": "#d97eb4",
+    "color": "#222222",
+    "name": "Kitty Giraudel"
+  }, {
+    "type": "link",
+    "href": "https://lolabee.neocities.org/",
+    "size": "11px",
+    "bg": "#facbd8",
+    "color": "#4f3d46",
+    "name": "lolabee"
+  }, {
+    "type": "link",
+    "href": "https://nohappynonsense.net/",
+    "size": "11px",
+    "bg": "#fcfce3",
+    "color": "black",
+    "name": "no happy nonsense"
+  }, {
+    "type": "link",
+    "href": "https://sleepydev.neocities.org",
+    "size": "11px",
+    "bg": "#f9f9f9",
+    "color": "#blueviolet",
+    "name": "sleepy dev"
+  }, {
+    "type": "link",
+    "href": "https://thinkdobecreate.com/",
+    "size": "11px",
+    "bg": "#7d4ce0",
+    "color": "#fff",
+    "name": "Stephanie Eckles"
+  }, {
+    "type": "link",
+    "href": "https://10kph.neocities.org",
+    "size": "11px",
+    "bg": "#1c1e26",
+    "color": "#e95678",
+    "name": "10kph"
+  }, {
+    "type": "link",
+    "href": "https://cassidoo.co",
+    "size": "11px",
+    "bg": "#fff",
+    "color": "rgb(235, 72, 136)",
+    "name": "Cassidy Williams"
+}] %}
+{% set friends = [
+  {
+    "url": "https://gothhoblin.me",
+    "size": "12px",
+    "bg": "#083820",
+    "color": "#fff",
+    "name": "goth hoblin"
+  }, {
+    "url": "https://www.thenotsomiserable.co.uk",
+    "size": "12px",
+    "bg": "#5f0979",
+    "color": "#fff",
+    "name": "not so miserable"
+  }, {
+    "url": "https://teafuellednonsense.wordpress.com"
+    class = "",
+    "size": "12px",
+    "bg": "#fff"
+    "color": "#00aadc"
+    "name": "justin Blogs Again!"
+  }, {
+    "url": "https://justnik.me/",
+    "size": "12px",
+    "bg": "#2d3748",
+    "color": "#fff",
+    "name": "just nik"
+  }, {
+    "url": "https://www.owain.codes/",
+    "size": "12px",
+    "bg": "#222831",
+    "color": "#b6ff00",
+    "name": "owain.codes"
+  }
+] %}
+{% set creatives = [
+  {
+    "url": "https://cheyennebarton.com/",
+    "size": "14px",
+    "bg": "#ffc929",
+    "color": "#fa4723",
+    "name": "cheyenne barton"
+  }, {
+    "url": "https://www.furrylittlepeach.com",
+    "size": "12px",
+    "bg": "#f0490a",
+    "color": "#fff",
+    "name": "furry little peach"
+  }, {
+    "url": "https://www.patreon.com/girlscape",
+    "size": "13px",
+    "bg": "#ff91bb",
+    "color": "#fff",
+    "name": "girlscape"
+  }, {
+    "url": "https://leighellexson.com",
+    "size": "12px",
+    "bg": "#9bc18a",
+    "color": "#fdfbf7",
+    "name": "Leigh Ellexson"
+  }, {
+    "url": "https://www.pansy-shop.com",
+    "size": "16px",
+    "bg": "#ffe3e2",
+    "color": "#220967",
+    "name": "pansy"
+  }, {
+    "url": "https://www.patreon.com/palomathepeach",
+    "size": "12px",
+    "bg": "#feebb3",
+    "color": "#212117",
+    "name": "paloma the peach"
+  }, {
+    "url": "https://uncomfyco.com",
+    "size": "13px",
+    "bg": "#603814",
+    "color": "#fff",
+    "name": "comfyco"
+  }
+] %}
+
 <section class="reading-width">
   <ul class="buttonwall">
+    {% for link in links %}
+    {% if link.type == "button" %}
     <li class="buttonwall__image">
-      <a href="https://32bit.cafe">
-        <img src="/images/buttons/32bitcafe.png" alt="32bit cafe">
+      <a href="{{button.href}}">
+          <img src="/images/buttons/{{button.src}}" alt="{{button.alt}}">
       </a>
     </li>
-    <li class="buttonwall__image">
-      <a href="https://pinkvampyr.leprd.space/accessiblenet/directory">
-        <img src="/images/buttons/accessiblenet.png" alt="Accessible New">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://midifreak.online/">
-        <img src="/images/buttons/coffeebug.png" alt="Coffee Bug">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://debtdeath.neocities.org/">
-        <img src="/images/buttons/debtdeath.png" alt="debtdeath">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://divergentrays.com/">
-        <img src="/images/buttons/divergentrays.png" alt="Divergent Rays">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://fh102.neocities.org/">
-        <img src="/images/buttons/fh102.png" alt="fh 102">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://fizzsea.neocities.org/">
-        <img src="/images/buttons/fizzsea.png" alt="Fizzsea">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://grlrot.neocities.org/">
-        <img src="/images/buttons/grlrot.png" alt="grlrot">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://hillhouse.neocities.org/">
-        <img src="/images/buttons/hillhouse.png" alt="Hillhouse">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://inkcaps.neocities.org/">
-        <img src="/images/buttons/inkcaps.png" alt="Inkcaps">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://jasm1nii.xyz/">
-        <img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://justfluffingaround.neocities.org/">
-        <img src="/images/buttons/justfluffingaround.png" alt="Just Fluffing Around">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://lostletters.neocities.org/">
-        <img src="/images/buttons/lostletters.png" alt="Lost Letters">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://sunosin.neocities.org/">
-        <img src="/images/buttons/lipu_pi_jan_sunosin.png" alt="lipu pi jan sunosin">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://maria.town/">
-        <img src="/images/buttons/marzka_cafe.png" alt="Maria">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://maya.land/">
-        <img src="/images/buttons/maya_land.png" alt="Maya Land">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://melonking.net/">
-        <img src="/images/buttons/melonking.png" alt="Melon King">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://moonpr1sm.neocities.org">
-        <img src="/images/buttons/moonpr1sm.png" alt="Moon Prism">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://owlsroost.xyz/">
-        <img src="/images/buttons/owlsroost.png" alt="Owl's Roost">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://neonaut.neocities.org/">
-        <img src="/images/buttons/neonaut.png" alt="Neonaut">
-      </a>
-    </li>
-      <li class="buttonwall__image">
-      <a href="https://nonkiru.art">
-        <img src="/images/buttons/nonkiru.png" alt="Nonkiru">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://notprincehamlet.neocities.org/">
-        <img src="/images/buttons/notprincehamlet.png" alt="Not Prince Hamlet">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://pinkvampyr.neocities.org/">
-        <img src="/images/buttons/pinkvampyr.png" alt="PinkVampyr">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://pixelmoondust.neocities.org/">
-        <img src="/images/buttons/pixelmoondust.png" alt="Pixel Moondust">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://punkwasp.leprd.space/">
-        <img src="/images/buttons/punkwasp.png" alt="PunkWasp">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://salixx.neocities.org/">
-        <img src="/images/buttons/salixx.png" alt="Salixx">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://sanguineroyal.com/">
-        <img src="/images/buttons/sanguineroyal.png" alt="Sanguine Royal">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://sentimentalfuturist.net/">
-        <img src="/images/buttons/sentimental_futurist.png" alt="Sentimental Futurist" alt="Sanguine Royal">
-      </a>">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://sneekrealm.neocities.org/">
-        <img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://solaria.neocities.org/">
-        <img src="/images/buttons/solaria.png" alt="Solaria">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://soyatoast.neocities.org/">
-        <img src="/images/buttons/soyatoast.png" alt="Soya Toast">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://starbreaker.org/">
-        <img src="/images/buttons/starbreaker.png" alt="Starbreaker">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://whiona.me/">
-        <img src="/images/buttons/whiona.png" alt="Whiona">
-      </a>
-    </li>
-    <li class="buttonwall__image">
-      <a href="https://xandra.cc/">
-        <img src="/images/buttons/xandra.png" alt="The Museum of Alexandra">
-      </a>
-    </li>
+    {% else %}
     <li class="buttonwall__item">
-      <a href="https://amberwilson.co.uk/" style="font-size: 13px;  background-color: #b6d0f1; color: #4b0e90;">Amber Wilson</a>
+      <a href="{{link.href}}" style="font-size: {{link.size}};  background-color: {{link.bg}}; color: {{link.color}};">
+        {{link.name}}
+      </a>
     </li>
-    <li class="buttonwall__item">
-      <a href="https://eevis.codes/" style="font-size: 15px; background-color: #e76f51; color: #0d0221;">Eevis</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1;">jessica journals</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://kittygiraudel.com/" style="font-size: 11px; background-color: #d97eb4; color: #222222;">Kitty Giraudel</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://lolabee.neocities.org/" style="font-size: 13px; background-color: #facbd8; color: #4f3d46;">lolabee</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://nohappynonsense.net/" style="font-size: 10px; background-color: #fcfce3; color: black;">no happy nonsense</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://sleepydev.neocities.org" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://thinkdobecreate.com/" style="font-size: 12px; background-color: #7d4ce0; color: #fff;">Stephanie Eckles</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://10kph.neocities.org" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://cassidoo.co" style="font-size: 12px; background-color: #fff; color: rgb(235, 72, 136);">Cassidy Williams</a>
-    </li>
+    {% endfor %}
   </ul>
 
   <h2>Friends</h2>
   <ul class="buttonwall">
+    {% for friend in friends %}
     <li class="buttonwall__item">
-      <a href="https://gothhoblin.me" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
+      <a href="{{friend.href}}" style="font-size: {{friend.size}};  background-color: {{friend.bg}}; color: {{friend.color}};">
+        {{friend.name}}
+      </a>
     </li>
-    <li class="buttonwall__item">
-      <a href="https://www.thenotsomiserable.co.uk" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://teafuellednonsense.wordpress.com" class="" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://justnik.me/" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://www.owain.codes/" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
-    </li>
+    {% endfor %}
   </ul>
 
   <h2>Creatives</h2>
   <ul class="buttonwall">
-    {# Artists #}
+    {% for creative in creatives %}
     <li class="buttonwall__item">
-      <a href="https://cheyennebarton.com/" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
+      <a href="{{creative.href}}" style="font-size: {{creative.size}};  background-color: {{creative.bg}}; color: {{creative.color}};">
+        {{creative.name}}
+      </a>
     </li>
-    <li class="buttonwall__item">
-      <a href="https://www.furrylittlepeach.com" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://leighellexson.com" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://www.pansy-shop.com" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://www.patreon.com/palomathepeach" style="font-size: 12px; background-color: #feebb3; color: #212117;">paloma the peach</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://uncomfyco.com" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
-    </li>
+    {% endfor %}
   </ul>
 
   <h2>Tools & fun things</h2>
