--- a/content/links.njk
+++ b/content/links.njk
@@ -23,343 +23,455 @@ scripts: '<script>
 
 {% set links = [
   {
-    "type": "button",
+    "alt": "32bit cafe",
     "href": "https://32bit.cafe",
     "src": "32bitcafe.png",
-    "alt": "32bit cafe"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Accessible Net",
     "href": "https://pinkvampyr.leprd.space/accessiblenet/directory",
     "src": "accessiblenet.png",
-    "alt": "Accessible Net"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Coffee Bug",
     "href": "https://midifreak.online/",
     "src": "coffeebug.png",
-    "alt": "Coffee Bug"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "debtdeath",
     "href": "https://debtdeath.neocities.org/",
     "src": "debtdeath.png",
-    "alt": "debtdeath"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Divergent Rays",
     "href": "https://divergentrays.com/",
     "src": "divergentrays.png",
-    "alt": "Divergent Rays"
-  }, {
-    "type": "button",
+    "type": "button"
+  },
+  {
+    "alt": "Dizzy",
     "href": "https://doctordizzy.space/",
     "src": "dizzy.png",
-    "alt": "Dizzy"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Double Incision",
     "href": "https://doubleincision.com/",
     "src": "doubleincision.png",
-    "alt": "Double Incision"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "fh 102",
     "href": "https://fh102.neocities.org/",
     "src": "fh102.png",
-    "alt": "fh 102"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Fizzsea",
     "href": "https://fizzsea.neocities.org/",
     "src": "fizzsea.png",
-    "alt": "Fizzsea"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "grlrot",
     "href": "https://grlrot.neocities.org/",
     "src": "grlrot.png",
-    "alt": "grlrot"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Hillhouse",
     "href": "https://hillhouse.neocities.org/",
     "src": "hillhouse.png",
-    "alt": "Hillhouse"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Inkcaps",
     "href": "https://inkcaps.neocities.org/",
     "src": "inkcaps.png",
-    "alt": "Inkcaps"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Jasmine's Journal",
     "href": "https://jasm1nii.xyz/",
     "src": "jasmines_journal.png",
-    "alt": "Jasmine's Journal"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Just Fluffing Around",
     "href": "https://justfluffingaround.neocities.org/",
     "src": "justfluffingaround.png",
-    "alt": "Just Fluffing Around"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Lost Letters",
     "href": "https://lostletters.neocities.org/",
     "src": "lostletters.png",
-    "alt": "Lost Letters"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "lipu pi jan sunosin",
     "href": "https://sunosin.neocities.org/",
     "src": "lipu_pi_jan_sunosin.png",
-    "alt": "lipu pi jan sunosin"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Maria",
     "href": "https://maria.town/",
     "src": "marzka_cafe.png",
-    "alt": "Maria"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Maya Land",
     "href": "https://maya.land/",
     "src": "maya_land.png",
-    "alt": "Maya Land"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Melon King",
     "href": "https://melonking.net/",
     "src": "melonking.png",
-    "alt": "Melon King"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Moon Prism",
     "href": "https://moonpr1sm.neocities.org",
     "src": "moonpr1sm.png",
-    "alt": "Moon Prism"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Owl's Roost",
     "href": "https://owlsroost.xyz/",
     "src": "owlsroost.png",
-    "alt": "Owl's Roost"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Neonaut",
     "href": "https://neonaut.neocities.org/",
     "src": "neonaut.png",
-    "alt": "Neonaut"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Nonkiru",
     "href": "https://nonkiru.art",
     "src": "nonkiru.png",
-    "alt": "Nonkiru"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Not Prince Hamlet",
     "href": "https://notprincehamlet.neocities.org/",
     "src": "notprincehamlet.png",
-    "alt": "Not Prince Hamlet"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "PinkVampyr",
     "href": "https://pinkvampyr.neocities.org/",
     "src": "pinkvampyr.png",
-    "alt": "PinkVampyr"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Pixel Moondust",
     "href": "https://pixelmoondust.neocities.org/",
     "src": "pixelmoondust.png",
-    "alt": "Pixel Moondust"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "PunkWasp",
     "href": "https://punkwasp.leprd.space/",
     "src": "punkwasp.png",
-    "alt": "PunkWasp"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Salixx",
     "href": "https://salixx.neocities.org/",
     "src": "salixx.png",
-    "alt": "Salixx"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Sanguine Royal",
     "href": "https://sanguineroyal.com/",
     "src": "sanguineroyal.png",
-    "alt": "Sanguine Royal"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Sentimental Futurist",
     "href": "https://sentimentalfuturist.net/",
     "src": "sentimental_futurist.png",
-    "alt": "Sentimental Futurist"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Sneek Realm",
     "href": "https://sneekrealm.neocities.org/",
     "src": "sneekrealm.png",
-    "alt": "Sneek Realm"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Solaria",
     "href": "https://solaria.neocities.org/",
     "src": "solaria.png",
-    "alt": "Solaria"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Soya Toast",
     "href": "https://soyatoast.neocities.org/",
     "src": "soyatoast.png",
-    "alt": "Soya Toast"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Starbreaker",
     "href": "https://starbreaker.org/",
     "src": "starbreaker.png",
-    "alt": "Starbreaker"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "Whiona",
     "href": "https://whiona.me/",
     "src": "whiona.png",
-    "alt": "Whiona"
+    "type": "button"
   }, {
-    "type": "button",
+    "alt": "The Museum of Alexandra",
     "href": "https://xandra.cc/",
     "src": "xandra.png",
-    "alt": "The Museum of Alexandra"
+    "type": "button"
   }, {
-    "type": "link",
+    "name": "Amber Wilson",
     "href": "https://amberwilson.co.uk/",
     "size": "11px",
     "bg": "#b6d0f1",
     "color": "#4b0e90",
-    "name": "Amber Wilson"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "Eevis",
     "href": "https://eevis.codes/",
     "size": "11px",
     "bg": "#e76f51",
     "color": "#0d0221",
-    "name": "Eevis"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "jessica journals",
     "href": "https://jessicajournals.com",
     "size": "11px",
     "bg": "#1e1e2e",
     "color": "#A5E3A1",
-    "name": "jessica journals"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "Kitty Giraudel",
     "href": "https://kittygiraudel.com/",
     "size": "11px",
     "bg": "#d97eb4",
     "color": "#222222",
-    "name": "Kitty Giraudel"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "lolabee",
     "href": "https://lolabee.neocities.org/",
     "size": "11px",
     "bg": "#facbd8",
     "color": "#4f3d46",
-    "name": "lolabee"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "no happy nonsense",
     "href": "https://nohappynonsense.net/",
     "size": "11px",
     "bg": "#fcfce3",
     "color": "black",
-    "name": "no happy nonsense"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "sleepy dev",
     "href": "https://sleepydev.neocities.org",
     "size": "11px",
     "bg": "#f9f9f9",
     "color": "#blueviolet",
-    "name": "sleepy dev"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "Stephanie Eckles",
     "href": "https://thinkdobecreate.com/",
     "size": "11px",
     "bg": "#7d4ce0",
     "color": "#fff",
-    "name": "Stephanie Eckles"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "10kph",
     "href": "https://10kph.neocities.org",
     "size": "11px",
     "bg": "#1c1e26",
     "color": "#e95678",
-    "name": "10kph"
+    "type": "link"
   }, {
-    "type": "link",
+    "name": "Cassidy Williams",
     "href": "https://cassidoo.co",
     "size": "11px",
     "bg": "#fff",
     "color": "rgb(235, 72, 136)",
-    "name": "Cassidy Williams"
-}] %}
+    "type": "link"
+  }, {
+    "name": "Flamed Fury",
+    "href": "https://flamedfury.com",
+    "size": "11px",
+    "bg": "#252525",
+    "color": "#de6b09",
+    "type": "link"
+}
+] %}
 {% set friends = [
   {
-    "url": "https://gothhoblin.me",
+    "name": "goth hoblin",
+    "href": "https://gothhoblin.me",
     "size": "12px",
     "bg": "#083820",
-    "color": "#fff",
-    "name": "goth hoblin"
-  }, {
-    "url": "https://www.thenotsomiserable.co.uk",
+    "color": "#fff"
+  },
+  {
+    "name": "not so miserable",
+    "href": "https://www.thenotsomiserable.co.uk",
     "size": "12px",
     "bg": "#5f0979",
-    "color": "#fff",
-    "name": "not so miserable"
+    "color": "#fff"
   }, {
-    "url": "https://teafuellednonsense.wordpress.com"
-    class = "",
+    "name": "justin Blogs Again!",
+    "href": "https://teafuellednonsense.wordpress.com",
     "size": "12px",
-    "bg": "#fff"
+    "bg": "#fff",
     "color": "#00aadc"
-    "name": "justin Blogs Again!"
   }, {
-    "url": "https://justnik.me/",
+    "name": "just nik",
+    "href": "https://justnik.me/",
     "size": "12px",
     "bg": "#2d3748",
-    "color": "#fff",
-    "name": "just nik"
+    "color": "#fff"
   }, {
-    "url": "https://www.owain.codes/",
+    "name": "owain.codes",
+    "href": "https://www.owain.codes/",
     "size": "12px",
     "bg": "#222831",
-    "color": "#b6ff00",
-    "name": "owain.codes"
+    "color": "#b6ff00"
   }
 ] %}
+
 {% set creatives = [
   {
-    "url": "https://cheyennebarton.com/",
+    "name": "cheyenne barton",
+    "href": "https://cheyennebarton.com/",
     "size": "14px",
     "bg": "#ffc929",
     "color": "#fa4723",
-    "name": "cheyenne barton"
+    "type": "link"
   }, {
-    "url": "https://www.furrylittlepeach.com",
+    "name": "furry little peach",
+    "href": "https://www.furrylittlepeach.com",
     "size": "12px",
     "bg": "#f0490a",
     "color": "#fff",
-    "name": "furry little peach"
+    "type": "link"
   }, {
-    "url": "https://www.patreon.com/girlscape",
+    "name": "girlscape",
+    "href": "https://www.patreon.com/girlscape",
     "size": "13px",
     "bg": "#ff91bb",
     "color": "#fff",
-    "name": "girlscape"
+    "type": "link"
   }, {
-    "url": "https://leighellexson.com",
+    "name": "Leigh Ellexson",
+    "href": "https://leighellexson.com",
     "size": "12px",
     "bg": "#9bc18a",
     "color": "#fdfbf7",
-    "name": "Leigh Ellexson"
+    "type": "link"
   }, {
-    "url": "https://www.pansy-shop.com",
+    "name": "pansy",
+    "href": "https://www.pansy-shop.com",
     "size": "16px",
     "bg": "#ffe3e2",
     "color": "#220967",
-    "name": "pansy"
+    "type": "link"
   }, {
-    "url": "https://www.patreon.com/palomathepeach",
+    "name": "paloma the peach",
+    "href": "https://www.patreon.com/palomathepeach",
     "size": "12px",
     "bg": "#feebb3",
     "color": "#212117",
-    "name": "paloma the peach"
+    "type": "link"
   }, {
-    "url": "https://uncomfyco.com",
+    "name": "comfyco",
+    "href": "https://uncomfyco.com",
     "size": "13px",
     "bg": "#603814",
     "color": "#fff",
-    "name": "comfyco"
+    "type": "link"
+  }
+] %}
+
+{% set tools = [{
+    "alt": "Wiby",
+    "href": "https://wiby.me",
+    "src": "wiby.png",
+    "type": "button"
+  }, {
+    "alt": "Internet Archive: Wayback Machine",
+    "href": "http://web.archive.org/",
+    "src": "wayback_machine.png",
+    "type": "button"
+  }, {
+    "name": "base 64 image converter",
+    "href": "https://www.base64-image.de/",
+    "size": "10px",
+    "bg": "#dadad2",
+    "color": "#e84c3d",
+    "type": "link"
+  }, {
+    "name": "Can I Use",
+    "href": "https://caniuse.com/",
+    "size": "14px",
+    "bg": "#833502",
+    "color": "#fff",
+    "type": "link"
+  }, {
+    "name": "CSS tricks",
+    "href": "https://css-tricks.com/",
+    "size": "14px",
+    "bg": "#383838",
+    "color": "#ff7a18",
+    "type": "link"
+  }, {
+    "name": "CodePen",
+    "href": "https://codepen.io/",
+    "size": "13px",
+    "bg": "#1e1f26",
+    "color": "#47cf73",
+    "type": "link"
+  }, {
+    "name": "ezgif",
+    "href": "https://ezgif.com",
+    "size": "14px",
+    "bg": "#292929",
+    "color": "#d9d9d9",
+    "type": "link"
+  }, {
+    "name": "goblin tools",
+    "href": "https://goblin.tools/",
+    "size": "14px",
+    "bg": "limegreen",
+    "color": "black",
+    "type": "link"
+  }, {
+    "name": "image anonymizer",
+    "href": "https://picdefacer.com/",
+    "size": "12px",
+    "bg": "#5577ff",
+    "color": "#fff",
+    "type": "link"
+  }, {
+    "name": "SVG optimiser",
+    "href": "https://jakearchibald.github.io/svgomg/",
+    "size": "12px",
+    "bg": "#00bcd4",
+    "color": "#000",
+    "type": "link"
+  }, {
+    "name": "TinyPNG",
+    "href": "https://tinypng.com/",
+    "size": "12px",
+    "bg": "#080706",
+    "color": "#f7f3f0",
+    "type": "link"
+  }
+] %}
+
+{% set bookmarks = [
+  {
+    "name": "marginalia",
+    "href": "https://www.marginalia.nu/links/bookmarks/",
+    "size": "13px",
+    "bg": "#444444",
+    "color": "#fff",
+    "type": "link"
+  },
+  {
+    "name": "personalsit.es",
+    "href": "https://personalsit.es/",
+    "size": "11px",
+    "bg": "#f7f7f7",
+    "color": "#030303",
+    "type": "link"
   }
 ] %}
 
 <section class="reading-width">
   <ul class="buttonwall">
-    {% for link in links %}
+    {% for link in links | sort(attribute="alt", attribute="name") %}
     {% if link.type == "button" %}
     <li class="buttonwall__image">
-      <a href="{{button.href}}">
-          <img src="/images/buttons/{{button.src}}" alt="{{button.alt}}">
+      <a href="{{link.href}}">
+          <img src="/images/buttons/{{link.src}}" alt="{{link.alt}}">
       </a>
     </li>
     {% else %}
@@ -368,12 +480,12 @@ scripts: '<script>
         {{link.name}}
       </a>
     </li>
+    {% endif%}
     {% endfor %}
   </ul>
-
   <h2>Friends</h2>
   <ul class="buttonwall">
-    {% for friend in friends %}
+    {% for friend in friends | sort(attribute="alt", attribute="name") %}
     <li class="buttonwall__item">
       <a href="{{friend.href}}" style="font-size: {{friend.size}};  background-color: {{friend.bg}}; color: {{friend.color}};">
         {{friend.name}}
@@ -384,7 +496,7 @@ scripts: '<script>
 
   <h2>Creatives</h2>
   <ul class="buttonwall">
-    {% for creative in creatives %}
+    {% for creative in creatives | sort(attribute="alt", attribute="name") %}
     <li class="buttonwall__item">
       <a href="{{creative.href}}" style="font-size: {{creative.size}};  background-color: {{creative.bg}}; color: {{creative.color}};">
         {{creative.name}}
@@ -395,43 +507,40 @@ scripts: '<script>
 
   <h2>Tools & fun things</h2>
   <ul class="buttonwall">
+    {% for tool in tools | sort(attribute="alt", attribute="name") %}
+    {% if tool.type == "button" %}
     <li class="buttonwall__image">
-      <a href="https://wiby.me/">
-        <img src="/images/buttons/wiby.png" alt="Wiby">
+      <a href="{{tool.href}}">
+          <img src="/images/buttons/{{tool.src}}" alt="{{tool.alt}}">
       </a>
     </li>
-    <li class="buttonwall__image">
-      <a href="http://web.archive.org/">
-        <img src="/images/buttons/wayback_machine.png" alt="Internet Archive: Wayback Machine">
+    {% else %}
+    <li class="buttonwall__item">
+      <a href="{{tool.href}}" style="font-size: {{tool.size}};  background-color: {{tool.bg}}; color: {{tool.color}};">
+        {{tool.name}}
       </a>
     </li>
-    <li class="buttonwall__item">
-      <a href="https://www.base64-image.de/" style="font-size: 10px; background-color: #dadad2; color: #e84c3d;">base 64 image converter</a>
+    {% endif%}
+    {% endfor %}
+  </ul>
+
+  <h2>Bookmarks & link lists</h2>
+  <ul class="buttonwall">
+    {% for bookmark in bookmarks | sort(attribute="alt", attribute="name") %}
+    {% if bookmark.type == "button" %}
+    <li class="buttonwall__image">
+      <a href="{{bookmark.href}}">
+          <img src="/images/buttons/{{bookmark.src}}" alt="{{bookmark.alt}}">
+      </a>
     </li>
+    {% else %}
     <li class="buttonwall__item">
-      <a href="https://caniuse.com/" style="font-size: 14px; background-color: #833502; color: #fff;">Can I Use</a>
+      <a href="{{bookmark.href}}" style="font-size: {{bookmark.size}};  background-color: {{bookmark.bg}}; color: {{bookmark.color}};">
+        {{bookmark.name}}
+      </a>
     </li>
-    <li class="buttonwall__item">
-      <a href="https://css-tricks.com/" style="font-size: 14px; background-color: #383838; color: #ff7a18;">CSS tricks</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://codepen.io/" style="font-size: 13px; background-color: #1e1f26; color: #47cf73;">CodePen</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://ezgif.com" style="font-size: 14px; background-color: #292929; color: #d9d9d9;">ezgif</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://goblin.tools/" style="font-size: 14px; background-color: limegreen; color: black;">goblin tools</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://picdefacer.com/" style="font-size: 12px; background-color: #5577ff; color: #fff;">image anonymizer</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://jakearchibald.github.io/svgomg/" style="font-size: 12px; background-color: #00bcd4; color: #000;">SVG optimiser</a>
-    </li>
-    <li class="buttonwall__item">
-      <a href="https://tinypng.com/" style="font-size: 12px; background-color: #080706; color: #f7f3f0;">TinyPNG</a>
-    </li>
+    {% endif%}
+    {% endfor %}
   </ul>
 
   <button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
