📃 Update homepage text

--- a/content/index.njk
+++ b/content/index.njk
@@ -112,10 +112,10 @@ scripts: '
 	<article class="dashboard__item --gallery">
 		<h2 class="visually-hidden">Gallery</h2>
 		<figure>
-			<img src="/images/piclog/piclog2.jpg" alt="Me standing on a wooden jetty looking out at the lake with my labrador, Orla. A lens flare from the sun in the top left." loading="lazy" width="100" height="100">
+			<img src="/images/piclog/piclog2.jpg" alt="White woman (me) stood with their back to the camera standing on a wooden jetty looking out at the lake with my labrador, Orla. A lens flare from the sun in the top left." loading="lazy" width="100" height="100">
 		</figure>
 		<figure>
-			<img src="/images/piclog/piclog0.jpg" alt="White woman with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy" width="100" height="100">
+			<img src="/images/piclog/piclog0.jpg" alt="White woman (me) with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy" width="100" height="100">
 		</figure>
 		<figure>
 			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out of the sea." loading="lazy" width="100" height="100">
@@ -123,9 +123,10 @@ scripts: '
 	</article>
 	<article class="dashboard__item">
 		<h2 class="visually-hidden">Intro</h2>
-		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you. I am Frills, the proud webmaster of this curious domain in this wonderous wifi world.</p>
+		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
+		<p>I am Frills, the proud webmaster of this curious domain in this wonderous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
 	</article>
-	<article class="dashboard__item --colours">
+	<div class="dashboard__item --colours">
 		<ul>
 			<li style="background-color: var(--text)"></li>
 			<li style="background-color: var(--accent)"></li>
@@ -140,9 +141,10 @@ scripts: '
 			<li style="background-color: var(--logo-anim-6)"></li>
 			<li style="background-color: var(--bodybg)"></li>
 		</ul>
-	</article>
+	</div>
 	<article class="dashboard__item">
-		<p>Do keep in mind that my collection is a work in progress, and I'm constantly adding new trinkets and reorganising shelves; sometimes you may find broken things... But fear not! I've already fixed the black hole I found yesterday.</p>
+		<h2 class="visually-hidden">Intro</h2>
+		<p>Here you will find my latest <a href="/blog">thoughts</a> and <a href="/experiments">experiments</a>, <a href="/links">portals to other websites</a>, and <a href="/guestbook">messages</a> left by other wanderers.</p>
 	</article>
 	<article class="dashboard__item --neocities --bgwiggly">
 		<img src="/images/neocities.svg" alt="Neocities cat holding a paintbrush and spanner">
