✨ Add Milsi Turin WIP

--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -103,6 +103,10 @@
   gap: 0.5rem;
 }
 
+.gallery img {
+  height: auto;
+}
+
 .dashboard__item.--colours ul {
   list-style-type: none;
   display: grid;
