--- a/content/index.njk
+++ b/content/index.njk
@@ -180,14 +180,6 @@ scripts: '
 		)}}
 	</div>
 	<div class="dashboard__item">
-		<h2 class="visually-hidden">Shrines</h2>
-		<a href="/shrine/orla" class="gallery" aria-label="Orla (my dog) shrine">
-			<img src="/images/shrine/orla/orla1.jpg" width="100" height="100" alt="" loading="lazy">
-			<img src="/images/shrine/orla/orla14.jpg" width="100" height="100" alt="" loading="lazy">
-			<img src="/images/shrine/orla/orla15.jpg" width="100" height="100" alt="" loading="lazy">
-		</a>
-	</div>
-	{# <div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small callout--info',
@@ -196,10 +188,18 @@ scripts: '
 			<h2>Currently reading</h2>
 			',
 			body = '
-			The Eye of the World - Robert Jordan
+			<a href="https://www.goodreads.com/book/show/13519397-throne-of-glass" class="hidden">Throne of Glass - Sarah J Maas</a>
 			'
 		)}}
-	</div> #}
+	</div>
+	<div class="dashboard__item">
+		<h2 class="visually-hidden">Shrines</h2>
+		<a href="/shrine/orla" class="gallery" aria-label="Orla (my dog) shrine">
+			<img src="/images/shrine/orla/orla1.jpg" width="100" height="100" alt="" loading="lazy">
+			<img src="/images/shrine/orla/orla14.jpg" width="100" height="100" alt="" loading="lazy">
+			<img src="/images/shrine/orla/orla15.jpg" width="100" height="100" alt="" loading="lazy">
+		</a>
+	</div>
 	<article class="dashboard__item --center noscriptHide">
 		<h2 class="visually-hidden">Website carbon</h2>
 		<div id="wcb" class="carbonbadge wcb-d"></div>
