--- a/assets/css/base/_img.css
+++ b/assets/css/base/_img.css
@@ -8,3 +8,14 @@ img {
   transform: translateY(1px);
   margin: 0 4px;
 }
+
+
+html[data-scheme='light'] .invert--lightmode {
+  filter: invert(1) brightness(100%) grayscale(1);
+}
+
+@media (prefers-color-scheme: light) {
+  .invert--lightmode {
+  filter: invert(1) brightness(100%) grayscale(1);
+  }
+}
