📃 Update intro text

--- a/content/index.njk
+++ b/content/index.njk
@@ -124,7 +124,7 @@ scripts: '
 	<article class="dashboard__item">
 		<h2 class="visually-hidden">Intro</h2>
 		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
-		<p>I am Frills, the proud webmaster of this curious domain in this wonderous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
+		<p>I am Frills, the proud webmistress of this webbe site in this wonderous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
 	</article>
 	<div class="dashboard__item --colours">
 		<ul>
