📃 Add bluey pic to Orla shrine

--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -23,6 +23,12 @@ date: 2023-11-19
 			<source src="/media/orla-dreamwoofs.mp3" type="audio/mpeg">
 		</audio> 
 	</figure>
+	<figure>
+	<img src="/images/shrine/orla/bluey.png" alt="When I ask my dog if she wants to go for a walk, first picture is a calm sitting dog, the second picture is a blurry dog going crazy.">
+	<figcaption>
+		Orla as a character from Bluey. <a href="https://picrew.me/share?cd=v2AT97FlXm">Picrew source</a>.
+	</figcaption>
+	</figure>
 
 </div>
 {%- endblock -%}
