--- a/content/index.njk
+++ b/content/index.njk
@@ -121,31 +121,32 @@ scripts: '
 			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out of the sea." loading="lazy" width="100" height="100">
 		</figure>
 	</article>
-	<article class="dashboard__item">
-		<h2 class="visually-hidden">Intro</h2>
-		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
-		<p>I am Frills, the proud webmistress of this webbe site in this wonderous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
-	</article>
-	<div class="dashboard__item --colours">
-		<ul>
-			<li style="background-color: var(--text)"></li>
-			<li style="background-color: var(--accent)"></li>
-			<li style="background-color: var(--interactive)"></li>
-			<li style="background-color: var(--link)"></li>
-			<li style="background-color: var(--linkhover)"></li>
-			<li style="background-color: var(--logo-anim-1)"></li>
-			<li style="background-color: var(--logo-anim-2)"></li>
-			<li style="background-color: var(--logo-anim-3)"></li>
-			<li style="background-color: var(--logo-anim-4)"></li>
-			<li style="background-color: var(--logo-anim-5)"></li>
-			<li style="background-color: var(--logo-anim-6)"></li>
-			<li style="background-color: var(--bodybg)"></li>
-		</ul>
-	</div>
-	<article class="dashboard__item">
-		<h2 class="visually-hidden">Intro</h2>
-		<p>Here you will find my latest <a href="/blog">thoughts</a> and <a href="/experiments">experiments</a>, <a href="/links">portals to other websites</a>, and <a href="/guestbook">messages</a> left by other wanderers.</p>
-	</article>
+	<section>
+		<div class="dashboard__item">
+			<h2 class="visually-hidden">Intro</h2>
+			<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you.</p>
+			<p>I am Frills, the proud webmistress of this webbe site in this wonderous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
+		</div>
+		<div class="dashboard__item --colours">
+			<ul aria-hidden="true">
+				<li style="background-color: var(--text)"></li>
+				<li style="background-color: var(--accent)"></li>
+				<li style="background-color: var(--interactive)"></li>
+				<li style="background-color: var(--link)"></li>
+				<li style="background-color: var(--linkhover)"></li>
+				<li style="background-color: var(--logo-anim-1)"></li>
+				<li style="background-color: var(--logo-anim-2)"></li>
+				<li style="background-color: var(--logo-anim-3)"></li>
+				<li style="background-color: var(--logo-anim-4)"></li>
+				<li style="background-color: var(--logo-anim-5)"></li>
+				<li style="background-color: var(--logo-anim-6)"></li>
+				<li style="background-color: var(--bodybg)"></li>
+			</ul>
+		</div>
+		<div class="dashboard__item">
+			<p>Here you will find my latest <a href="/blog">thoughts</a> and <a href="/experiments">experiments</a>, <a href="/links">portals to other websites</a>, and <a href="/guestbook">messages</a> left by other wanderers.</p>
+		</div>
+	</section>
 	<article class="dashboard__item --neocities --bgwiggly">
 		<img src="/images/neocities.svg" alt="Neocities cat holding a paintbrush and spanner">
 		<div>
@@ -188,7 +189,7 @@ scripts: '
 			<h2>Currently reading</h2>
 			',
 			body = '
-			<a href="https://www.goodreads.com/book/show/13519397-throne-of-glass" class="hidden">Throne of Glass - Sarah J Maas</a>
+			<a href="https://www.goodreads.com/book/show/76705490-crown-of-midnight" class="hidden">Crown of Midnight - Sarah J Maas</a>
 			'
 		)}}
 	</div>
