📚 Update currently reading to use Goodreads

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,7 @@
 @import url('./components/_tags.css');
 @import url('./components/_webrings.css');
 @import url('./components/_code.css');
+@import url('./components/_goodreads.css');
 
 @import url('./pages/_homepage.css');
 @import url('./pages/_bloglist.css');
