--- a/content/index.njk
+++ b/content/index.njk
@@ -180,17 +180,19 @@ scripts: '
 			'
 		)}}
 	</div>
-	<article class="dashboard__item noscriptHide --goodreads">
-		<div class="callout callout--small callout--info">
-			<header>
-				<span class="emoji" role="img" aria-label="Stack of books" data-emoji="📚">📚</span>
-				<h2>Currently reading</h2>
-			</header>
-			<div id="gr_custom_widget_1701697876">
-			</div>
-		</div>
-	</article>
-	<script src="https://www.goodreads.com/review/custom_widget/42722131.x?cover_position=left&cover_size=medium&num_books=5&order=d&shelf=currently-reading&show_author=1&show_cover=0&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_added&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=1&widget_id=1701697876&widget_text_color=000000&widget_title_size=medium&widget_width=thin" type="text/javascript" charset="utf-8"></script>
+	<div class="dashboard__item">
+		{{ macro.callout(
+			element = 'article',
+			modifiers = 'callout--small callout--info',
+			header = '
+			<span class="emoji" role="img" aria-label="Books">📚</span>
+			<h2>Currently reading</h2>
+			',
+			body = '
+			<a href="https://www.goodreads.com/book/show/76705490-crown-of-midnight">Crown of Midnight - Sarah J Maas</a>
+			'
+		)}}
+	</div>
 	<div class="dashboard__item">
 		<h2 class="visually-hidden">Shrines</h2>
 		<a href="/shrine/orla" class="gallery" aria-label="Orla (my dog) shrine">
