📃 Update Guestbook CoC

--- a/content/guestbook.njk
+++ b/content/guestbook.njk
@@ -26,6 +26,7 @@ scripts: '<script src="/js/guestbook.js" defer></script>'
         <li>No harrassment.</li>
         <li>No trolling.</li>
         <li>No spam.</li>
+        <li>No advertisting.</li>
         <li>Do not share private information, especially if you're a minor.</li>
         <li>Be respectful to me and other commenters.</li>
       </ul>
